# program-examples

./: Cargo.toml  Guide.md
tokens/create-token/anchor/: Anchor-bak.toml  Anchor.toml  design.md
tokens/create-token/anchor/programs/create-token/: Cargo.toml
tokens/create-token/anchor/tests/: test.ts
tokens/escrow/anchor/: Anchor-bak.toml  FAQ.md  Guide.md  design.md
tokens/escrow/anchor/tests/: escrow.ts
tokens/external-delegate-token-master/anchor/: design.md
tokens/nft-minter/anchor/: Anchor-bak.toml  design.md
tokens/nft-minter/anchor/tests/: test.ts
tokens/nft-operations/anchor/: Anchor.toml  design.md
tokens/nft-operations/anchor/tests/: mint-nft.ts
tokens/pda-mint-authority/anchor/: Anchor.toml
tokens/spl-token-minter/anchor/: Anchor.toml
tokens/token-2022/memo-transfer/anchor/: Anchor.toml  design.md
tokens/token-2022/memo-transfer/anchor/tests/: memo-transfer.ts
tokens/token-2022/transfer-fee/anchor/: Anchor.toml  design.md
tokens/token-fundraiser/anchor/: Anchor.toml  Guide.md
tokens/token-fundraiser/anchor/tests/: fundraiser.ts
tokens/token-swap/anchor/: Anchor-bak.toml  Anchor.toml  cargo-tree.md
tokens/token-swap/anchor/programs/token-swap/: Cargo.toml
tokens/token-swap/anchor/programs/token-swap/src/: lib.rs
tokens/token-swap/anchor/programs/token-swap/src/instructions/: create_amm.rs  create_pool.rs  withdraw_liquidity.rs
tokens/token-swap/anchor/tests/: create-amm.ts  create-pool.ts  deposit-liquidity.ts  utils.ts  withdraw-liquidity.ts
tokens/transfer-tokens/anchor/: Anchor.toml
(+20 files in other folders)
