[package]
name = "swap_example"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "swap_example"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.30.1", features = ["metadata"] }
# fixed = "=1.27.0"
fixed = { path = "/System/Volumes/Data/resource/github/fixed" }
half = "=1.8.3"
# bytemuck = { version = "=1.20.0", features = ["min_const_generics"] }
# bytemuck_derive = "=1.8.1"